# xsuite

./: README.md  package-lock.json  package.json  vite.config.ts  xsuite.icns
dist-electron/: main.js
electron/: main.ts
src/: App.tsx  WorkspaceSwitcher.tsx  grokCodeStore.ts  grokStore.ts  index.css  main.tsx  store.ts  webviewPool.ts  workspaces.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  temp_test.rs  test.rs
src/tabs/: GrokChat.tsx  GrokCode.tsx
